# test-child-debug

./: CMakeLists.txt  README.md
child/: main.cpp
parent/: main.cpp
